[package]
name = "lightning-time"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ImTheSquid/lightning-time"
authors = ["Jack Hogan <jackhogan11@gmail.com>"]
description = "Lightning Time in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
hex = "0.4.3"
prisma = "0.1.1"
regex = "1.10.2"
thiserror = "1.0.50"
