[package]
name = "lightning-time"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ImTheSquid/lightning-time"
authors = ["Jack Hogan <jackhogan11@gmail.com>"]
description = "Lightning Time in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = ["dep:regex", "palette/default"]

[dependencies]
chrono = { version = "0.4.31", default-features = false }
hex = { version = "0.4.3", default-features = false }
libm = "0.2.8"
palette = { version = "0.7.5", default-features = false, features = ["libm"] }
regex = { version = "1.10.2", optional = true }
thiserror-no-std = "2.0.2"
