[package]
name = "lightning-time"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ImTheSquid/lightning-time"
authors = ["Jack Hogan <jackhogan11@gmail.com>"]
description = "Lightning Time in Rust"

[features]
default = ["std"]
std = ["dep:regex", "palette/default", "clap"]

[dependencies]
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
clap = { version = "4.5.23", features = ["derive"], optional = true }
hex = { version = "0.4.3", default-features = false }
libm = "0.2.8"
palette = { version = "0.7.5", default-features = false, features = ["libm"] }
regex = { version = "1.10.2", optional = true }
thiserror-no-std = "2.0.2"
